Implement custom query api
