# semantics/registry/src/main/resources/static/aas-registry-openapi.yaml
@@ -493,6 +493,31 @@ paths:
           description: Asset identifier key-value-pairs deleted successfully
       x-semanticIds:
       - https://admin-shell.io/aas/API/DeleteAllAssetLinksById/1/0/RC02
+  /lookup/shells/query:
+    post:
+      tags:
+        - Registry and Discovery Interface
+      summary: Returns a list of Asset Administration Shell ids based on Asset identifier key-value-pairs.
+      operationId: GetAllAssetAdministrationShellIdsByQuery
+      requestBody:
+        description: Asset Administration Shell Descriptor object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ShellLookup'
+        required: true
+      responses:
+        "200":
+          description: Requested Asset Administration Shell ids
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Identifier'
+              examples:
+                complete:
+                  $ref: '#/components/examples/lookup-shells-by-aas-identifier-response'
 components:
   schemas:
     # The official spec does not support pagination right now. This is an addition.
@@ -780,6 +805,18 @@ components:
         status:
           type: integer
           description: The status code
+    ShellLookup:
+      type: object
+      required:
+        - query
+      properties:
+        query:
+          type: object
+          properties:
+            assetIds:
+              type: array
+              items:
+                $ref: '#/components/schemas/IdentifierKeyValuePair'
   securitySchemes:
     CatenaXOpenId:
       type: openIdConnect
